--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "test_react",
-  "homepage":"https://mupinggg07.github.io/test_react_5501/",
+  "homepage": "https://mupinggg07.github.io/test_react_5501/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -16,7 +16,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predploy": "npm run build",
-    "deploy":"gh-pages -d build"
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
@@ -35,5 +35,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.3.0"
   }
 }
